--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,13 +48,7 @@ if (CMAKE_COMPILER_IS_GNUCXX)
             " -Werror=return-type"
             " -Werror=uninitialized"
             " -Werror=unused-parameter"
-            " -Wno-catch-value"
-            " -Wno-class-memaccess"
-            " -Wno-deprecated-copy"
-            " -Wno-expansion-to-defined"
-            " -Wno-ignored-attributes"
-            " -Wno-implicit-fallthrough"
-            " -Wno-sign-compare"
+            " -Werror=unused-variable"
             )
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_WARNING_FLAGS}")
 endif ()
