Fix GCC warnings in Genecut (#1055)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,6 +93,7 @@ add_subdirectory(src/plugins/dna_stat)
 add_subdirectory(src/plugins/dotplot)
 add_subdirectory(src/plugins/enzymes)
 add_subdirectory(src/plugins/external_tool_support)
+add_subdirectory(src/plugins/genecut)
 add_subdirectory(src/plugins/genome_aligner)
 add_subdirectory(src/plugins/linkdata_support)
 add_subdirectory(src/plugins/orf_marker)
